# datahub-custom-domain-source

./: domain_recipe.yaml  pyproject.toml
create_derived_table_domains_source/: source.py
tests/: test_source.py
tests/data/: manifest.json
